# fitness_tookit

./: .gitignore  AGENTS.md  README.md  pyproject.toml  requirements.txt
fitness_toolkit/: __main__.py  cli.py  config.py  crypto.py  database.py  logger.py
fitness_toolkit/clients/: AGENTS.md  __init__.py  base.py  coros.py  garmin.py
fitness_toolkit/services/: __init__.py  account.py  download.py  scheduler.py  transfer.py  transfer_queue.py  transfer_settings.py  transfer_worker.py
fitness_toolkit/web/: app.py
fitness_toolkit/web/templates/: index.html
tests/: test_crypto.py  test_database.py  test_garmin_duplicate_confirm.py  test_transfer_queue.py  test_transfer_worker.py  test_web_accounts.py  test_web_download.py  test_web_scheduler.py  test_web_transfer.py  test_web_transfer_settings.py
